<package>
  <name>
    dvo_core
  </name>
  <version>0.0.42</version>
  <description>
     dvo_core
  </description>
  <author>Christian Kerl</author>
  <maintainer email="tamer@ids-helix.fzi.de">Tamer</maintainer>
  <license>GPL</license>
  <url>http://ros.org/wiki/dvo_core</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>sophus</build_depend>
  <build_depend>common_rosdeps</build_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>sophus</run_depend>
  <run_depend>common_rosdeps</run_depend>
  
  <!-- <export> -->
  <!--     <cpp cflags="`rosboost-cfg -/-cflags` -I${prefix}/include" -->
  <!--       lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ldvo_core"/> -->
  <!-- </export> -->
</package>


